--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@
 #spring.datasource.url = jdbc:sqlserver://jatin-balar.database.windows.net:1433;database=jatin;user=jatinbalar@jatin-balar;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 
 logging.level.org.hibernate.SQL=DEBUG
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.datasource.url=jdbc:sqlserver://jatin-balar.database.windows.net:1433;database=jatin;user=jatinbalar@jatin-balar;password=@Gvpatel$8347;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
