--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-#spring.datasource.username=jatinbalar
-#spring.datasource.password=@Gvpatel$8347
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
-#spring.datasource.url = jdbc:sqlserver://jatin-balar.database.windows.net:1433;database=jatin;user=jatinbalar@jatin-balar;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-
 logging.level.org.hibernate.SQL=DEBUG
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-spring.datasource.url=jdbc:sqlserver://jatin-balar.database.windows.net:1433;database=jatin;user=jatinbalar@jatin-balar;password=@Gvpatel$8347;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://jatin-balar.database.windows.net:1433;database=jatindb;user=jatinbalar@jatin-balar;password=@Gvpatel$8347;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;  
+
+#spring.datasource.url=${CUSTOMCONNSTR_db}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
