--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.org.hibernate.SQL=DEBUG
-spring.datasource.url=jdbc:sqlserver://jatin-balar.database.windows.net:1433;database=jatindb;user=jatinbalar@jatin-balar;password=@Gvpatel$8347;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;  
+##spring.datasource.url=jdbc:sqlserver://jatin-balar.database.windows.net:1433;database=jatindb;user=jatinbalar@jatin-balar;password=@Gvpatel$8347;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;  
 
-#spring.datasource.url=${CUSTOMCONNSTR_db}
+spring.datasource.url=${CUSTOMCONNSTR_db}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
 spring.jpa.hibernate.ddl-auto=update
